<resources>
    <string name="app_name">MyShopPal</string>
    <string name="myshoppal">MyShopPal</string>
    <string name="login">Login</string>
    <string name="fill_the_input_below">Please fill the input below here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_account">Already have an account?\u0020</string>
    <string name="sign_in">Sign in</string>
    <string name="terms_conditions"><u><![CDATA[Terms & Conditions]]></u></string>
    <string name="i_agree_to_the">I Agree To The\u0020</string>

    <!-- Error Messages-->
    <string name="enter_first_name">*Please enter your first name.</string>
    <string name="enter_last_name">*Please enter your last name.</string>
    <string name="enter_email">*Please enter your email.</string>
    <string name="enter_password">*Please enter your password.</string>
    <string name="enter_confirm_password">*Please enter password confirmation.</string>
    <string name="password_and_confirm_password_mismatch">*Password and confirm password don\'t match.</string>
    <string name="agree_terms_and_conditions">*Please agree terms and conditions.</string>
    <string name="register_successful">Registration successful!</string>
    <string name="register_failed">Registration failed!</string>
    <string name="login_successful">Login successful!</string>
    <string name="login_failed">Login failed!</string>
    <string name="please_wait">Please Wait...</string>
    <string name="reset_password">Enter your e-mail address and we\'ll send you an e-mail to reset your password</string>
    <string name="submit">Submit</string>
    <string name="email_sent_to_reset_password_successfully">An email has been sent successfully to reset your password!</string>
    <string name="email_failed_to_sent">There is no registered account using this email!</string>
</resources>