<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey_50"
    android:paddingBottom="@dimen/root_padding"
    tools:context=".activities.SignupActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/action_bar_signup"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back" />

    <com.malash.shopapp.utils.MSPTextViewBold
        android:id="@+id/tv_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/create_account_margin_top"
        android:text="@string/create_account"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/login_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar_signup" />

    <com.malash.shopapp.utils.MSPTextView
        android:id="@+id/tv_fillInput_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:text="@string/fill_the_input_below"
        android:textColor="@color/light_grey"
        android:textSize="@dimen/fill_the_input_below_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_create_account"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_account" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fillInput_signup"
        app:layout_constraintWidth_percent="0.79">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_first_name"
                style="@style/MSPTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_user">

                <com.malash.shopapp.utils.MSPEditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/light_grey" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_last_name"
                style="@style/MSPTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Last Name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_first_name"
                app:startIconDrawable="@drawable/ic_user">

                <com.malash.shopapp.utils.MSPEditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/light_grey" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_email_signup"
                style="@style/MSPTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_last_name"
                app:startIconDrawable="@drawable/ic_email">

                <com.malash.shopapp.utils.MSPEditText
                    android:id="@+id/et_email_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/light_grey" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_password_signup"
                style="@style/MSPTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_email_signup"
                app:startIconDrawable="@drawable/ic_password">

                <com.malash.shopapp.utils.MSPEditText
                    android:id="@+id/et_password_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/light_grey" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_password_confirm_signup"
                style="@style/MSPTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_password_signup"
                app:startIconDrawable="@drawable/ic_password">

                <com.malash.shopapp.utils.MSPEditText
                    android:id="@+id/et_password_confirm_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/light_grey" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.malash.shopapp.utils.MSPCheckBox
                android:id="@+id/checkbox_agree_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue_grey_600"
                android:text="@string/i_agree_to_the"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/forgot_password_text_size"
                app:layout_constraintEnd_toStartOf="@+id/tv_agree_terms"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ti_password_confirm_signup" />

            <com.malash.shopapp.utils.MSPTextView
                android:id="@+id/tv_agree_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_conditions"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/forgot_password_text_size"
                app:layout_constraintBottom_toBottomOf="@+id/checkbox_agree_terms"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/checkbox_agree_terms"
                app:layout_constraintTop_toBottomOf="@+id/ti_password_confirm_signup" />

            <TextView
                android:id="@+id/tv_agree_error_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree_terms_and_conditions"
                android:textColor="@color/error"
                android:textSize="@dimen/error_msg_text_size"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/checkbox_agree_terms"
                app:layout_constraintTop_toBottomOf="@+id/checkbox_agree_terms" />

            <com.malash.shopapp.utils.MSPButton
                android:id="@+id/btn_signup"
                style="@style/MainButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/agree_to_terms_margin"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_agree_error_msg" />

            <com.malash.shopapp.utils.MSPTextView
                android:id="@+id/tv_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/agree_to_terms_margin"
                android:text="@string/have_account"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/forgot_password_text_size"
                app:layout_constraintEnd_toStartOf="@+id/tv_sign_in"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

            <com.malash.shopapp.utils.MSPTextViewBold
                android:id="@+id/tv_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/blue_grey_600"
                android:textSize="@dimen/forgot_password_text_size"
                app:layout_constraintBottom_toBottomOf="@+id/tv_have_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_have_account"
                app:layout_constraintTop_toTopOf="@+id/tv_have_account" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

