<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey_50"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/normal_margin"
        android:scaleType="fitXY"
        android:src="@drawable/login_logo"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.malash.shopapp.utils.MSPTextViewBold
        android:id="@+id/MSPTextViewBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/login_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.malash.shopapp.utils.MSPTextView
        android:id="@+id/MSPTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:text="@string/fill_the_input_below"
        android:textColor="@color/light_grey"
        android:textSize="@dimen/fill_the_input_below_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/MSPTextViewBold"
        app:layout_constraintTop_toBottomOf="@+id/MSPTextViewBold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:hint="@string/email"
        android:padding="0dp"
        android:textColorHint="@color/light_grey"
        app:boxCornerRadiusBottomEnd="@dimen/main_btn_radius"
        app:boxCornerRadiusBottomStart="@dimen/main_btn_radius"
        app:boxCornerRadiusTopEnd="@dimen/main_btn_radius"
        app:boxCornerRadiusTopStart="@dimen/main_btn_radius"
        app:boxStrokeColor="@color/blue_grey_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/MSPTextView"
        app:layout_constraintTop_toBottomOf="@+id/MSPTextView"
        app:layout_constraintWidth_percent="0.79"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/light_grey">

        <com.malash.shopapp.utils.MSPEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/light_grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:hint="@string/password"
        android:padding="0dp"
        android:textColorHint="@color/light_grey"
        app:boxCornerRadiusBottomEnd="@dimen/main_btn_radius"
        app:boxCornerRadiusBottomStart="@dimen/main_btn_radius"
        app:boxCornerRadiusTopEnd="@dimen/main_btn_radius"
        app:boxCornerRadiusTopStart="@dimen/main_btn_radius"
        app:boxStrokeColor="@color/blue_grey_600"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/MSPTextView"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintWidth_percent="0.79"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconTint="@color/light_grey">

        <com.malash.shopapp.utils.MSPEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/light_grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.malash.shopapp.utils.MSPTextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:text="@string/forgot_password"
        android:textColor="@color/light_grey"
        android:textSize="@dimen/forgot_password_text_size"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <com.malash.shopapp.utils.MSPButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_btn_margin"
        android:background="@drawable/main_btn"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/login_btn_text_size"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />

    <com.malash.shopapp.utils.MSPTextView
        android:id="@+id/tv_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginEnd="@dimen/tv_have_account_margin"
        android:text="@string/have_an_account"
        android:textColor="@color/light_grey"
        android:textSize="@dimen/forgot_password_text_size"
        app:layout_constraintEnd_toEndOf="@+id/tv_sign_up"
        app:layout_constraintEnd_toStartOf="@+id/tv_sign_up"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <com.malash.shopapp.utils.MSPTextViewBold
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/blue_grey_600"
        android:textSize="@dimen/forgot_password_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/tv_have_account"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toEndOf="@+id/tv_have_account"
        app:layout_constraintTop_toTopOf="@+id/tv_have_account" />

</androidx.constraintlayout.widget.ConstraintLayout>

