<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/root_padding"
    android:background="@color/blue_grey_50"
    tools:context=".activities.ForgotPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/action_bar_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/forgot_password_logo"
        app:layout_constraintEnd_toEndOf="@+id/tv_reset_password"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="@+id/tv_reset_password"
        app:layout_constraintTop_toBottomOf="@id/action_bar_forgot_password" />

    <com.malash.shopapp.utils.MSPTextViewBold
        android:id="@+id/tv_forgot_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/login_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.malash.shopapp.utils.MSPTextView
        android:id="@+id/tv_reset_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintWidth_percent="0.79"
        android:layout_marginTop="@dimen/text_margin"
        android:text="@string/reset_password"
        android:textColor="@color/light_grey"
        android:textSize="@dimen/fill_the_input_below_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password_title" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reset_password"
        android:layout_marginTop="@dimen/text_margin"
        app:layout_constraintWidth_percent="0.79">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_email_forgot_password"
                style="@style/MSPTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:startIconDrawable="@drawable/ic_email">

                <com.malash.shopapp.utils.MSPEditText
                    android:id="@+id/et_email_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/light_grey" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.malash.shopapp.utils.MSPButton
                android:id="@+id/btn_submit_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                style="@style/MainButton"
                android:text="@string/submit"
                app:layout_constraintEnd_toEndOf="@+id/ti_email_forgot_password"
                app:layout_constraintStart_toStartOf="@+id/ti_email_forgot_password"
                app:layout_constraintTop_toBottomOf="@+id/ti_email_forgot_password" />

           </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

